--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -7,6 +7,9 @@
           li = message
 
   .field
+    = f.label :author_id
+    = f.number_field :author_id
+  .field
     = f.label :title
     = f.text_field :title
   .field
