--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -1,20 +1,9 @@
 = form_for @article do |f|
-  - if @article.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@article.errors.count, "error")} prohibited this article from being saved:"
-      ul
-        - @article.errors.full_messages.each do |message|
-          li = message
+  = render partial: "global_partials/form_errors", locals: { record: @article }
 
   .field
     = f.label :author_id
     = f.number_field :author_id
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :content
-    = f.text_area :content
   .field
     = f.label :published_at
     = f.datetime_select :published_at
@@ -27,4 +16,11 @@
   .field
     = f.label :slug
     = f.text_field :slug
+  .field
+    = f.label :title
+    = f.text_field :title
+  .field
+    = f.label :content
+    = f.rich_text_area :content
+
   .actions = f.submit
