--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -23,6 +23,4 @@ p
   strong Slug:
   = @article.slug
 
-=> link_to 'Edit', edit_article_path(@article)
-'|
-=< link_to 'Back', articles_path
+=< link_to 'Back', root_path
