--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,15 +1,17 @@
 doctype html
-html
+html lang="ja"
   head
     title
       | App
-    meta content="width=device-width, initial-scale=1.0" name="viewport" /
+    meta content="width=device-width, initial-scale=1.0" name="viewport"
     = csrf_meta_tags
     = csp_meta_tag
     link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = render partial: "global_partials/notification"
-    = render partial: 'global_partials/header'
-    = yield
+    = render partial: 'layouts/partials/header'
+    #main-container
+      = yield
+    = render partial: 'layouts/partials/footer'
+    = render partial: "layouts/partials/notification"
