create article index and side_menu, and more

--- a/app/javascript/src/styles/_layouts.scss
+++ b/app/javascript/src/styles/_layouts.scss
@@ -8,6 +8,10 @@ footer {
   width: 100%;
 }
 
+h1 {
+  margin-top: 0;
+}
+
 #footer-nav {
   min-height: 80px;
 }
@@ -30,4 +34,9 @@ footer {
   left: 15px;
   bottom: 0;
   width: calc(100vw - 30px);
+}
+
+.breadcrumbs {
+  position: absolute;
+  top: 90px;
 }
