--- a/app/javascript/src/styles/index.scss
+++ b/app/javascript/src/styles/index.scss
@@ -1,7 +1,7 @@
 // @import "uikit";
-
-$global-primary-background: #009688;
-$global-secondary-background: #ff5252;
+$global-background: #f4f5f7;
+$global-primary-background: #ff5252;
+$global-secondary-background: #009688;
 
 // 2. Import default variables and available mixins.
 @import "uikit/src/scss/variables-theme.scss";
