--- a/app/views/articles/_article_card.html.slim
+++ b/app/views/articles/_article_card.html.slim
@@ -1,37 +1,40 @@
-article class="uk-width-1-2@m"
+article.article-card.uk-animation-slide-bottom-medium class="uk-width-1-2@m"
 
-  .uk-card.uk-card-default.uk-card-hover.uk-card-body
-    = link_to article_path(article), class: 'uk-display-block uk-link-text' do
+  .uk-card.uk-card-default.uk-card-hover
+    .article-medium.uk-card-media-top
       - if article.cover.attached?
-        .uk-card-media-top
-          = image_tag article.cover
+        = image_tag article.cover
+      - else
+        = image_pack_tag 'no_image.jpg'
 
-      h2.uk-card-title.uk-margin-remove-bottom
-        = article.title
+    .uk-card-body
+      = link_to article_path(article), class: 'uk-display-block uk-link-text' do
+        h2.uk-card-title.uk-margin-remove-bottom
+          = article.title
 
-    p.uk-text-meta.uk-margin-remove-top.uk-flex-inline.uk-flex-middle
-      span.uk-margin-small-right uk-icon="icon: history; ratio: 0.8"
-      time datetime="#{article.updated_at}"
-        = l article.updated_at
+      p.uk-text-meta.uk-margin-remove-top.uk-flex-inline.uk-flex-middle
+        span.uk-margin-small-right uk-icon="icon: history; ratio: 0.8"
+        time datetime="#{article.updated_at}"
+          = l article.updated_at
 
-    div.uk-grid-collapse.uk-margin-small-bottom	uk-grid=""
-      .uk-width-1-4
-        span
-          | Category:
-      .uk-width-3-4
-        - if article.category
-          = link_to article.category.name, category_path(article.category), class: 'uk-link-text'
-        - else
-          span.uk-link-text.uk-display-inline-block.uk-margin-small-left
-          = 'None'
+      div.uk-grid-collapse.uk-margin-small-bottom	uk-grid=""
+        .uk-width-1-4
+          span
+            = Category.model_name.human
+        .uk-width-3-4
+          - if article.category
+            = link_to article.category.name, category_path(article.category), class: 'uk-link-text'
+          - else
+            span.uk-link-text.uk-display-inline-block.uk-margin-small-left
+            = t 'utilities.none'
 
-    div.uk-grid-collapse	uk-grid=""
-      .uk-width-1-4
-        span.uk-display-inline-block
-          | Tag:
-      .uk-width-3-4
-        - article.tags.map do |tag|
-          = link_to tag.name, tag_path(tag), class: 'uk-badge uk-display-inline-block uk-margin-small-right'
+      div.uk-grid-collapse	uk-grid=""
+        .uk-width-1-4
+          span.uk-display-inline-block
+            = Tag.model_name.human
+        .uk-width-3-4
+          - article.tags.map do |tag|
+            = link_to tag.name, tag_path(tag), class: 'uk-badge uk-display-inline-block uk-margin-small-right'
 
-    p
-      = article.opening_sentence
+      p
+        = article.opening_sentence
