--- a/app/views/layouts/partials/_side_menu_categories.html.slim
+++ b/app/views/layouts/partials/_side_menu_categories.html.slim
@@ -1,6 +1,7 @@
-.uk-card.uk-card-default.uk-padding-small.uk-margin
-  h5.uk-card-title Category
+section.uk-card.uk-card-default.uk-padding-small.uk-margin
+  h5.uk-card-title
+    = Category.model_name.human
   ul.uk-list.uk-list-divider
     - @side_menu_categories.map do |category|
       li
-        = link_to category.name, category_path(category), class: 'uk-link-text'
+        = link_to "#{category.name} (#{category.articles_count})", category_path(category), class: 'uk-link-text'
