--- a/app/views/layouts/partials/_side_menu_categories.html.slim
+++ b/app/views/layouts/partials/_side_menu_categories.html.slim
@@ -1,7 +1,18 @@
 section.uk-card.uk-card-default.uk-padding-small.uk-margin
   h5.uk-card-title
     = Category.model_name.human
-  ul.uk-list.uk-list-divider
+  ul.uk-list.uk-list-divider uk-accordion=""
     - @side_menu_categories.map do |category|
       li
-        = link_to "#{category.name} (#{category.articles_count})", category_path(category), class: 'uk-link-text'
+        - if category.parent?
+          = link_to category.name, "#", class: 'uk-accordion-title uk-text-default uk-link-text'
+          .uk-accordion-content
+            hr.uk-margin-remove
+            ul.uk-list.uk-list-divider
+              - category.children.map do |child|
+                li.uk-padding-small.uk-padding-remove-vertical
+                  = link_to "#{child.name} (#{child.articles_count})", category_path(child), class: 'uk-link-text'
+        - else
+          = link_to "#{category.name} (#{category.articles_count})", category_path(category), class: 'uk-link-text'
+    li
+      = link_to "#{t('utilities.uncategorized')} (#{@side_menu_uncategorized_articles_count})", '/categories/0', class: 'uk-link-text'
