--- a/app/javascript/src/styles/_layouts.scss
+++ b/app/javascript/src/styles/_layouts.scss
@@ -1,7 +1,12 @@
-body {
-  #main-container {
-    min-height: calc(100vh - 160px);
-  }
+#main-container {
+  min-height: calc(100vh - 250px);
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#main-container.breadcrumbs-padding {
+  padding-top: 45px;
+  padding-bottom: 45px;
 }
 
 footer {
