--- a/app/javascript/src/styles/index.scss
+++ b/app/javascript/src/styles/index.scss
@@ -2,6 +2,7 @@
 $global-background: #f4f5f7;
 $global-primary-background: #ff5252;
 $global-secondary-background: #009688;
+$global-muted-background: lightgrey;
 
 // 2. Import default variables and available mixins.
 @import "uikit/src/scss/variables-theme.scss";
