--- a/app/views/tags/show.html.slim
+++ b/app/views/tags/show.html.slim
@@ -1,8 +1,11 @@
 - breadcrumb :tag, @tag
 = render partial: 'layouts/partials/breadcrumbs'
 
-p
-  strong Name:
-  = @tag.name
+#articles-sorting-container
+  = render partial: 'articles/sort_tabs'
 
-=< link_to 'Back', tags_path
+section#articles-container.uk-grid-medium uk-grid=""
+  = render partial: 'articles/article_card', collection: @articles, as: 'article'
+
+#articles-paginate-container.uk-flex.uk-flex-center.uk-margin-top
+  = paginate @articles, remote: true
