create articles show

--- a/app/javascript/src/styles/index.scss
+++ b/app/javascript/src/styles/index.scss
@@ -12,4 +12,4 @@ $global-muted-background: lightgrey;
 @import "uikit/src/scss/uikit-theme.scss";
 
 @import "layouts";
-@import "colors";
+@import "style";
