--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,5 +19,6 @@ html lang="ja"
           div class="uk-visible@m uk-width-1-4@m"
             = render partial: 'layouts/partials/side_menu_categories'
             = render partial: 'layouts/partials/side_menu_tags'
+            = render partial: 'layouts/partials/side_menu_table_of_content'
     = render partial: 'layouts/partials/footer'
     = render partial: "layouts/partials/notification"
