--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -1,34 +1,47 @@
 - breadcrumb :article, @article
 = render partial: 'layouts/partials/breadcrumbs'
 
-article.article.uk-article.uk-card.uk-card-default.uk-card-body
+article#article.uk-article.uk-card.uk-card-default.uk-margin-bottom
+  - if @article.cover.attached?
+    .uk-card-media-top
+      = image_tag @article.cover, class: 'article-cover-img', alt: "article-#{@article.id}-cover", width: 890, height: 600, loading: 'lazy'
 
-  h1.uk-article-title
-    = @article.title
+  .uk-card-body
+    h1.uk-article-title
+      = @article.title
 
-  p.uk-article-meta
-    span.uk-display-inline-block.uk-margin-small-right
-      = Article.human_attribute_name(:updated_at) + ':'
-    span
-      = l @article.updated_at
-    br
-    span.uk-display-inline-block.uk-margin-small-right
-      = Category.model_name.human + ':'
-    - if @article.category
-      = link_to @article.category.name, category_path(@article.category), class: 'uk-link-text'
-    - else
-      = t 'utilities.none'
-    br
-    span.uk-display-inline-block.uk-margin-small-right
-      = Tag.model_name.human + ':'
-    - @article.tags.map.with_index do |tag, i|
-      - unless i.zero?
-        span.uk-display-inline-block.uk-margin-small-right
-          = "/"
-      = link_to tag.name, tag_path(tag), class: 'uk-display-inline-block uk-margin-small-right'
-    - if @article.tags.length.zero?
-      = t 'utilities.none'
+    p.uk-article-meta
+      span.uk-display-inline-block.uk-margin-small-right
+        = Article.human_attribute_name(:updated_at) + ':'
+      span
+        = l @article.updated_at
+      br
+      span.uk-display-inline-block.uk-margin-small-right
+        = Category.model_name.human + ':'
+      - if @article.category
+        = link_to @article.category.name, category_path(@article.category), class: 'uk-link-text'
+      - else
+        = t 'utilities.none'
+      br
+      span.uk-display-inline-block.uk-margin-small-right
+        = Tag.model_name.human + ':'
+      - @article.tags.map.with_index do |tag, i|
+        - unless i.zero?
+          span.uk-display-inline-block.uk-margin-small-right
+            = "/"
+        = link_to tag.name, tag_path(tag), class: 'uk-display-inline-block uk-margin-small-right'
+      - if @article.tags.length.zero?
+        = t 'utilities.none'
 
-  = @content_html
+    #article-body
+      = @content_html
 
-=< link_to t('buttons.back'), 'javascript:history.back()'
+.article-last-links.uk-flex.uk-flex-wrap-between
+  .prev-link.uk-width-1-3.uk-text-left
+    - if @previous_article.present?
+      = link_to @previous_article.title, article_path(@previous_article), class: 'uk-button uk-button-text'
+  .back-link.uk-width-1-3.uk-text-center
+    = link_to t('buttons.back'), 'javascript:history.back()', class: 'uk-button uk-button-text'
+  .next-link.uk-width-1-3.uk-text-right
+    - if @next_article.present?
+      = link_to @next_article.title, article_path(@next_article), class: 'uk-button uk-button-text'
