--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -19,7 +19,7 @@
           .uk-background-muted.uk-height-1-1.uk-flex.uk-flex-middle.uk-padding-small.uk-padding-remove-vertical
             = label_tag :email, t('.email'), class: 'uk-text-bolder'
         div class="uk-width-3-4@m"
-          = email_field :email, '', class: 'uk-input', data: { regexp: "^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$", message: t('.email_validation') }
+          = email_field_tag :email, '', class: 'uk-input', data: { regexp: "^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$", message: t('.email_validation') }
 
       .contact-form-control.uk-grid-collapse.uk-margin uk-grid=""
         div class="uk-width-1-4@m"
@@ -29,4 +29,4 @@
           = text_area_tag :content, '', class: 'uk-textarea uk-height-medium', data: { regexp: '^.+$', message: t('.require') }
 
       .uk-flex.uk-flex-center
-        = submit_tag t('.submit'), id: 'contactFormSubmit', class: 'uk-button uk-button-primary uk-width-1-1'
+        = submit_tag t('.submit'), id: 'contactFormSubmit', class: 'uk-button uk-button-primary uk-width-1-1', disabled: true
