--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,5 +20,6 @@ html lang="ja"
             = render partial: 'layouts/partials/side_menu_categories'
             = render partial: 'layouts/partials/side_menu_tags'
             = render partial: 'layouts/partials/side_menu_table_of_content'
+      a#to-top-button.uk-button.uk-button-primary.uk-border-circle.uk-animation-slide-bottom href="#" uk-totop="" uk-scroll=""
     = render partial: 'layouts/partials/footer'
     = render partial: "layouts/partials/notification"
