--- a/app/javascript/src/styles/_layouts.scss
+++ b/app/javascript/src/styles/_layouts.scss
@@ -40,9 +40,13 @@ h1 {
 #notification {
   z-index: 5000;
   position: fixed;
-  left: 15px;
+  left: 2rem;
   bottom: 0;
-  width: calc(100vw - 30px);
+
+  .global-notice {
+    min-width: 14rem;
+    padding: 14px 48px 14px 24px;
+  }
 }
 
 .breadcrumbs {
@@ -52,6 +56,20 @@ h1 {
 
 ul#articles-sort-list > li {
   min-width: 7rem;
+}
+
+#to-top-button {
+  display: none;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  width: 38px;
+  height: 38px;
+  line-height: normal;
+}
+
+#to-top-button.show {
+  display: block;
 }
 
 .article-card {
@@ -76,6 +94,48 @@ ul#articles-sort-list > li {
 
   #article-body {
     width: 100%;
+  }
+}
+
+#article-comments {
+  .comment-p-1 {
+    padding-left: 1.5rem;
+  }
+
+  .comment-p-2 {
+    padding-left: 3rem;
+  }
+
+  .comment-p-3 {
+    padding-left: 4.5rem;
+  }
+
+  .comment-p-4 {
+    padding-left: 6rem;
+  }
+
+  .comment-p-5 {
+    padding-left: 7.5rem;
+  }
+
+  .comment-p-6 {
+    padding-left: 9rem;
+  }
+
+  .comment-p-7 {
+    padding-left: 10.5rem;
+  }
+
+  .comment-p-8 {
+    padding-left: 12rem;
+  }
+
+  .comment-p-9 {
+    padding-left: 13.5rem;
+  }
+
+  .comment-p-10 {
+    padding-left: 15rem;
   }
 }
 
