--- a/app/views/layouts/partials/_side_menu_table_of_content.html.slim
+++ b/app/views/layouts/partials/_side_menu_table_of_content.html.slim
@@ -5,4 +5,4 @@
     ul.uk-list.uk-list-divider.uk-list-collapse
       - generate_toc_array.map do |head|
         li
-          = link_to head[:title], "##{head[:id]}", class: "toc-link toc-p-#{head[:indent]}"
+          = link_to head[:title], "##{head[:id]}", class: "toc-link toc-p-#{head[:indent]} uk-link-text"
