--- a/app/javascript/src/styles/_layouts.scss
+++ b/app/javascript/src/styles/_layouts.scss
@@ -1,3 +1,9 @@
+#main-cover {
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+
 #main-container {
   min-height: calc(100vh - 250px);
   padding-top: 20px;
