--- a/app/views/layouts/partials/_side_menu_recent_articles.html.slim
+++ b/app/views/layouts/partials/_side_menu_recent_articles.html.slim
@@ -1,5 +1,5 @@
 - if @setting.anable_recent_popular
-  section.uk-card.uk-card-default.uk-padding-small.uk-margin
+  section#recent-articles-side-menu.uk-card.uk-card-default.uk-padding-small.uk-margin
     h5.uk-card-title
       = t 'utilities.recent_popular_posts'
     ul.uk-list.uk-list-divider
