--- a/app/views/layouts/partials/_side_menu_tags.html.slim
+++ b/app/views/layouts/partials/_side_menu_tags.html.slim
@@ -1,4 +1,4 @@
-section.uk-card.uk-card-default.uk-padding-small.uk-margin
+section#tags-side-menu.uk-card.uk-card-default.uk-padding-small.uk-margin
   h5.uk-card-title
     = Tag.model_name.human
   ul.uk-list.uk-list-divider
