--- a/app/views/articles/_article_card.html.slim
+++ b/app/views/articles/_article_card.html.slim
@@ -24,9 +24,9 @@ article.article-card.uk-animation-slide-bottom-medium class="uk-width-1-2@m"
           .uk-width-3-4
             - if article.category
               object
-                = link_to article.category.name, category_path(article.category), class: 'uk-link-text'
+                = link_to article.category.name, category_path(article.category), class: 'articles-category-link uk-link-text'
             - else
-              = t 'utilities.none'
+              = t 'articles-category-link utilities.none'
 
         div.uk-grid-collapse	uk-grid=""
           .uk-width-1-4
@@ -35,7 +35,7 @@ article.article-card.uk-animation-slide-bottom-medium class="uk-width-1-2@m"
           .uk-width-3-4
             - article.tags.map do |tag|
               object
-                = link_to tag.name, tag_path(tag), class: 'uk-badge uk-display-inline-block uk-margin-small-right'
+                = link_to tag.name, tag_path(tag), class: 'articles-tag-link uk-badge uk-display-inline-block uk-margin-small-right'
 
             - if article.tags.length.zero?
               = t 'utilities.none'
