--- a/app/views/layouts/partials/_side_menu_categories.html.slim
+++ b/app/views/layouts/partials/_side_menu_categories.html.slim
@@ -1,4 +1,4 @@
-section.uk-card.uk-card-default.uk-padding-small.uk-margin
+section#categories-side-menu.uk-card.uk-card-default.uk-padding-small.uk-margin
   h5.uk-card-title
     = Category.model_name.human
   ul.uk-list.uk-list-divider uk-accordion=""
