--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -1,4 +1,4 @@
-footer.uk-background-secondary.uk-light
+footer#global-footer.uk-background-secondary.uk-light
   .uk-container
     nav#footer-nav.uk-flex-center uk-navbar=""
       div#footer-nav-link-container class="uk-flex-1 uk-visible@m"
